@@ -1,3 +1,8 @@
+June 13 2005 - John_K
+	- Added tinyxml
+	- Added nidDb class to enable NID name resolution
+	- Fixed compiler warnings
+	
 June 12 2005 - John_K
 	- Removed routine to find string tables, I was blind and missed the fact that the index to it
 	  in the sections list is in the elf header.
